Tp2020Grupo07_Lexico_y_Sintactico/y.output
Terminals which are not used

   DO
   FOR
   GUION


Grammar

    0 $accept: progra $end

    1 progra: programa

    2 programa: sentencia
    3         | programa sentencia

    4 sentencia: DECVAR declaraciones ENDDEC
    5          | WRITE ID
    6          | WRITE CTE_STRING
    7          | READ ID
    8          | READ CTE_STRING

    9 declaraciones: declaracion
   10              | declaraciones declaracion

   11 declaracion: listavar DPUNTO tdato PCOMA
   12            | listavar DPUNTO tdato OP_AS expresion PCOMA

   13 listavar: ID
   14         | listavar COMA ID

   15 tdato: INT
   16      | STRING
   17      | REAL

   18 sentencia: asignacion
   19          | iteracion
   20          | seleccion

   21 asignacion: ID OP_AS expresion
   22           | ID OP_AS CTE_STRING

   23 seleccion: IF condicion THEN asignacion ELSE asignacion
   24          | IF condicion THEN asignacion

   25 iteracion: WHILE condicion LLAVA programa LLAVC

   26 condicion: comparacion
   27          | condicion AND comparacion
   28          | condicion OR comparacion

   29 comparacion: BETWEEN PARA ID COMA CORA expresion PCOMA expresion CORC PARC
   30            | expresion comparador expresion

   31 comparador: MEN
   32           | MAY
   33           | MEN_I
   34           | MAY_I
   35           | DIST
   36           | IGU
   37           | NOT MEN
   38           | NOT MAY
   39           | NOT MEN_I
   40           | NOT MAY_I
   41           | NOT DIST
   42           | NOT IGU

   43 expresion: expresion OP_SUM termino
   44          | expresion OP_RES termino
   45          | termino

   46 termino: termino OP_MUL factor
   47        | termino OP_DIV factor
   48        | factor

   49 factor: CTE_INT
   50       | CTE_REAL
   51       | ID
   52       | PARA expresion PARC
   53       | AVG CORA lista CORC

   54 lista: expresion
   55      | lista COMA expresion


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 5 7 13 14 21 22 29 51
CTE_INT (259) 49
CTE_REAL (260) 50
CTE_STRING (261) 6 8 22
INT (262) 15
REAL (263) 17
STRING (264) 16
IF (265) 23 24
THEN (266) 23 24
ELSE (267) 23
WHILE (268) 25
DO (269)
FOR (270)
AND (271) 27
OR (272) 28
BETWEEN (273) 29
AVG (274) 53
DECVAR (275) 4
ENDDEC (276) 4
WRITE (277) 5 6
READ (278) 7 8
PARA (279) 29 52
PARC (280) 29 52
CORA (281) 29 53
CORC (282) 29 53
LLAVA (283) 25
LLAVC (284) 25
OP_AS (285) 12 21 22
OP_SUM (286) 43
OP_MUL (287) 46
OP_DIV (288) 47
OP_RES (289) 44
COMA (290) 14 29 55
PCOMA (291) 11 12 29
DPUNTO (292) 11 12
GUION (293)
MEN (294) 31 37
MAY (295) 32 38
MEN_I (296) 33 39
MAY_I (297) 34 40
DIST (298) 35 41
IGU (299) 36 42
NOT (300) 37 38 39 40 41 42


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
progra (47)
    on left: 1, on right: 0
programa (48)
    on left: 2 3, on right: 1 3 25
sentencia (49)
    on left: 4 5 6 7 8 18 19 20, on right: 2 3
declaraciones (50)
    on left: 9 10, on right: 4 10
declaracion (51)
    on left: 11 12, on right: 9 10
listavar (52)
    on left: 13 14, on right: 11 12 14
tdato (53)
    on left: 15 16 17, on right: 11 12
asignacion (54)
    on left: 21 22, on right: 18 23 24
seleccion (55)
    on left: 23 24, on right: 20
iteracion (56)
    on left: 25, on right: 19
condicion (57)
    on left: 26 27 28, on right: 23 24 25 27 28
comparacion (58)
    on left: 29 30, on right: 26 27 28
comparador (59)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42, on right: 30
expresion (60)
    on left: 43 44 45, on right: 12 21 29 30 43 44 52 54 55
termino (61)
    on left: 46 47 48, on right: 43 44 45 46 47
factor (62)
    on left: 49 50 51 52 53, on right: 46 47 48
lista (63)
    on left: 54 55, on right: 53 55


state 0

    0 $accept: . progra $end

    ID      shift, and go to state 1
    IF      shift, and go to state 2
    WHILE   shift, and go to state 3
    DECVAR  shift, and go to state 4
    WRITE   shift, and go to state 5
    READ    shift, and go to state 6

    progra      go to state 7
    programa    go to state 8
    sentencia   go to state 9
    asignacion  go to state 10
    seleccion   go to state 11
    iteracion   go to state 12


state 1

   21 asignacion: ID . OP_AS expresion
   22           | ID . OP_AS CTE_STRING

    OP_AS  shift, and go to state 13


state 2

   23 seleccion: IF . condicion THEN asignacion ELSE asignacion
   24          | IF . condicion THEN asignacion

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    BETWEEN   shift, and go to state 17
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    condicion    go to state 20
    comparacion  go to state 21
    expresion    go to state 22
    termino      go to state 23
    factor       go to state 24


state 3

   25 iteracion: WHILE . condicion LLAVA programa LLAVC

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    BETWEEN   shift, and go to state 17
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    condicion    go to state 25
    comparacion  go to state 21
    expresion    go to state 22
    termino      go to state 23
    factor       go to state 24


state 4

    4 sentencia: DECVAR . declaraciones ENDDEC

    ID  shift, and go to state 26

    declaraciones  go to state 27
    declaracion    go to state 28
    listavar       go to state 29


state 5

    5 sentencia: WRITE . ID
    6          | WRITE . CTE_STRING

    ID          shift, and go to state 30
    CTE_STRING  shift, and go to state 31


state 6

    7 sentencia: READ . ID
    8          | READ . CTE_STRING

    ID          shift, and go to state 32
    CTE_STRING  shift, and go to state 33


state 7

    0 $accept: progra . $end

    $end  shift, and go to state 34


state 8

    1 progra: programa .
    3 programa: programa . sentencia

    ID      shift, and go to state 1
    IF      shift, and go to state 2
    WHILE   shift, and go to state 3
    DECVAR  shift, and go to state 4
    WRITE   shift, and go to state 5
    READ    shift, and go to state 6

    $default  reduce using rule 1 (progra)

    sentencia   go to state 35
    asignacion  go to state 10
    seleccion   go to state 11
    iteracion   go to state 12


state 9

    2 programa: sentencia .

    $default  reduce using rule 2 (programa)


state 10

   18 sentencia: asignacion .

    $default  reduce using rule 18 (sentencia)


state 11

   20 sentencia: seleccion .

    $default  reduce using rule 20 (sentencia)


state 12

   19 sentencia: iteracion .

    $default  reduce using rule 19 (sentencia)


state 13

   21 asignacion: ID OP_AS . expresion
   22           | ID OP_AS . CTE_STRING

    ID          shift, and go to state 14
    CTE_INT     shift, and go to state 15
    CTE_REAL    shift, and go to state 16
    CTE_STRING  shift, and go to state 36
    AVG         shift, and go to state 18
    PARA        shift, and go to state 19

    expresion  go to state 37
    termino    go to state 23
    factor     go to state 24


state 14

   51 factor: ID .

    $default  reduce using rule 51 (factor)


state 15

   49 factor: CTE_INT .

    $default  reduce using rule 49 (factor)


state 16

   50 factor: CTE_REAL .

    $default  reduce using rule 50 (factor)


state 17

   29 comparacion: BETWEEN . PARA ID COMA CORA expresion PCOMA expresion CORC PARC

    PARA  shift, and go to state 38


state 18

   53 factor: AVG . CORA lista CORC

    CORA  shift, and go to state 39


state 19

   52 factor: PARA . expresion PARC

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    expresion  go to state 40
    termino    go to state 23
    factor     go to state 24


state 20

   23 seleccion: IF condicion . THEN asignacion ELSE asignacion
   24          | IF condicion . THEN asignacion
   27 condicion: condicion . AND comparacion
   28          | condicion . OR comparacion

    THEN  shift, and go to state 41
    AND   shift, and go to state 42
    OR    shift, and go to state 43


state 21

   26 condicion: comparacion .

    $default  reduce using rule 26 (condicion)


state 22

   30 comparacion: expresion . comparador expresion
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 44
    OP_RES  shift, and go to state 45
    MEN     shift, and go to state 46
    MAY     shift, and go to state 47
    MEN_I   shift, and go to state 48
    MAY_I   shift, and go to state 49
    DIST    shift, and go to state 50
    IGU     shift, and go to state 51
    NOT     shift, and go to state 52

    comparador  go to state 53


state 23

   45 expresion: termino .
   46 termino: termino . OP_MUL factor
   47        | termino . OP_DIV factor

    OP_MUL  shift, and go to state 54
    OP_DIV  shift, and go to state 55

    $default  reduce using rule 45 (expresion)


state 24

   48 termino: factor .

    $default  reduce using rule 48 (termino)


state 25

   25 iteracion: WHILE condicion . LLAVA programa LLAVC
   27 condicion: condicion . AND comparacion
   28          | condicion . OR comparacion

    AND    shift, and go to state 42
    OR     shift, and go to state 43
    LLAVA  shift, and go to state 56


state 26

   13 listavar: ID .

    $default  reduce using rule 13 (listavar)


state 27

    4 sentencia: DECVAR declaraciones . ENDDEC
   10 declaraciones: declaraciones . declaracion

    ID      shift, and go to state 26
    ENDDEC  shift, and go to state 57

    declaracion  go to state 58
    listavar     go to state 29


state 28

    9 declaraciones: declaracion .

    $default  reduce using rule 9 (declaraciones)


state 29

   11 declaracion: listavar . DPUNTO tdato PCOMA
   12            | listavar . DPUNTO tdato OP_AS expresion PCOMA
   14 listavar: listavar . COMA ID

    COMA    shift, and go to state 59
    DPUNTO  shift, and go to state 60


state 30

    5 sentencia: WRITE ID .

    $default  reduce using rule 5 (sentencia)


state 31

    6 sentencia: WRITE CTE_STRING .

    $default  reduce using rule 6 (sentencia)


state 32

    7 sentencia: READ ID .

    $default  reduce using rule 7 (sentencia)


state 33

    8 sentencia: READ CTE_STRING .

    $default  reduce using rule 8 (sentencia)


state 34

    0 $accept: progra $end .

    $default  accept


state 35

    3 programa: programa sentencia .

    $default  reduce using rule 3 (programa)


state 36

   22 asignacion: ID OP_AS CTE_STRING .

    $default  reduce using rule 22 (asignacion)


state 37

   21 asignacion: ID OP_AS expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 44
    OP_RES  shift, and go to state 45

    $default  reduce using rule 21 (asignacion)


state 38

   29 comparacion: BETWEEN PARA . ID COMA CORA expresion PCOMA expresion CORC PARC

    ID  shift, and go to state 61


state 39

   53 factor: AVG CORA . lista CORC

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    expresion  go to state 62
    termino    go to state 23
    factor     go to state 24
    lista      go to state 63


state 40

   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino
   52 factor: PARA expresion . PARC

    PARC    shift, and go to state 64
    OP_SUM  shift, and go to state 44
    OP_RES  shift, and go to state 45


state 41

   23 seleccion: IF condicion THEN . asignacion ELSE asignacion
   24          | IF condicion THEN . asignacion

    ID  shift, and go to state 1

    asignacion  go to state 65


state 42

   27 condicion: condicion AND . comparacion

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    BETWEEN   shift, and go to state 17
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    comparacion  go to state 66
    expresion    go to state 22
    termino      go to state 23
    factor       go to state 24


state 43

   28 condicion: condicion OR . comparacion

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    BETWEEN   shift, and go to state 17
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    comparacion  go to state 67
    expresion    go to state 22
    termino      go to state 23
    factor       go to state 24


state 44

   43 expresion: expresion OP_SUM . termino

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    termino  go to state 68
    factor   go to state 24


state 45

   44 expresion: expresion OP_RES . termino

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    termino  go to state 69
    factor   go to state 24


state 46

   31 comparador: MEN .

    $default  reduce using rule 31 (comparador)


state 47

   32 comparador: MAY .

    $default  reduce using rule 32 (comparador)


state 48

   33 comparador: MEN_I .

    $default  reduce using rule 33 (comparador)


state 49

   34 comparador: MAY_I .

    $default  reduce using rule 34 (comparador)


state 50

   35 comparador: DIST .

    $default  reduce using rule 35 (comparador)


state 51

   36 comparador: IGU .

    $default  reduce using rule 36 (comparador)


state 52

   37 comparador: NOT . MEN
   38           | NOT . MAY
   39           | NOT . MEN_I
   40           | NOT . MAY_I
   41           | NOT . DIST
   42           | NOT . IGU

    MEN    shift, and go to state 70
    MAY    shift, and go to state 71
    MEN_I  shift, and go to state 72
    MAY_I  shift, and go to state 73
    DIST   shift, and go to state 74
    IGU    shift, and go to state 75


state 53

   30 comparacion: expresion comparador . expresion

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    expresion  go to state 76
    termino    go to state 23
    factor     go to state 24


state 54

   46 termino: termino OP_MUL . factor

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    factor  go to state 77


state 55

   47 termino: termino OP_DIV . factor

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    factor  go to state 78


state 56

   25 iteracion: WHILE condicion LLAVA . programa LLAVC

    ID      shift, and go to state 1
    IF      shift, and go to state 2
    WHILE   shift, and go to state 3
    DECVAR  shift, and go to state 4
    WRITE   shift, and go to state 5
    READ    shift, and go to state 6

    programa    go to state 79
    sentencia   go to state 9
    asignacion  go to state 10
    seleccion   go to state 11
    iteracion   go to state 12


state 57

    4 sentencia: DECVAR declaraciones ENDDEC .

    $default  reduce using rule 4 (sentencia)


state 58

   10 declaraciones: declaraciones declaracion .

    $default  reduce using rule 10 (declaraciones)


state 59

   14 listavar: listavar COMA . ID

    ID  shift, and go to state 80


state 60

   11 declaracion: listavar DPUNTO . tdato PCOMA
   12            | listavar DPUNTO . tdato OP_AS expresion PCOMA

    INT     shift, and go to state 81
    REAL    shift, and go to state 82
    STRING  shift, and go to state 83

    tdato  go to state 84


state 61

   29 comparacion: BETWEEN PARA ID . COMA CORA expresion PCOMA expresion CORC PARC

    COMA  shift, and go to state 85


state 62

   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino
   54 lista: expresion .

    OP_SUM  shift, and go to state 44
    OP_RES  shift, and go to state 45

    $default  reduce using rule 54 (lista)


state 63

   53 factor: AVG CORA lista . CORC
   55 lista: lista . COMA expresion

    CORC  shift, and go to state 86
    COMA  shift, and go to state 87


state 64

   52 factor: PARA expresion PARC .

    $default  reduce using rule 52 (factor)


state 65

   23 seleccion: IF condicion THEN asignacion . ELSE asignacion
   24          | IF condicion THEN asignacion .

    ELSE  shift, and go to state 88

    $default  reduce using rule 24 (seleccion)


state 66

   27 condicion: condicion AND comparacion .

    $default  reduce using rule 27 (condicion)


state 67

   28 condicion: condicion OR comparacion .

    $default  reduce using rule 28 (condicion)


state 68

   43 expresion: expresion OP_SUM termino .
   46 termino: termino . OP_MUL factor
   47        | termino . OP_DIV factor

    OP_MUL  shift, and go to state 54
    OP_DIV  shift, and go to state 55

    $default  reduce using rule 43 (expresion)


state 69

   44 expresion: expresion OP_RES termino .
   46 termino: termino . OP_MUL factor
   47        | termino . OP_DIV factor

    OP_MUL  shift, and go to state 54
    OP_DIV  shift, and go to state 55

    $default  reduce using rule 44 (expresion)


state 70

   37 comparador: NOT MEN .

    $default  reduce using rule 37 (comparador)


state 71

   38 comparador: NOT MAY .

    $default  reduce using rule 38 (comparador)


state 72

   39 comparador: NOT MEN_I .

    $default  reduce using rule 39 (comparador)


state 73

   40 comparador: NOT MAY_I .

    $default  reduce using rule 40 (comparador)


state 74

   41 comparador: NOT DIST .

    $default  reduce using rule 41 (comparador)


state 75

   42 comparador: NOT IGU .

    $default  reduce using rule 42 (comparador)


state 76

   30 comparacion: expresion comparador expresion .
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 44
    OP_RES  shift, and go to state 45

    $default  reduce using rule 30 (comparacion)


state 77

   46 termino: termino OP_MUL factor .

    $default  reduce using rule 46 (termino)


state 78

   47 termino: termino OP_DIV factor .

    $default  reduce using rule 47 (termino)


state 79

    3 programa: programa . sentencia
   25 iteracion: WHILE condicion LLAVA programa . LLAVC

    ID      shift, and go to state 1
    IF      shift, and go to state 2
    WHILE   shift, and go to state 3
    DECVAR  shift, and go to state 4
    WRITE   shift, and go to state 5
    READ    shift, and go to state 6
    LLAVC   shift, and go to state 89

    sentencia   go to state 35
    asignacion  go to state 10
    seleccion   go to state 11
    iteracion   go to state 12


state 80

   14 listavar: listavar COMA ID .

    $default  reduce using rule 14 (listavar)


state 81

   15 tdato: INT .

    $default  reduce using rule 15 (tdato)


state 82

   17 tdato: REAL .

    $default  reduce using rule 17 (tdato)


state 83

   16 tdato: STRING .

    $default  reduce using rule 16 (tdato)


state 84

   11 declaracion: listavar DPUNTO tdato . PCOMA
   12            | listavar DPUNTO tdato . OP_AS expresion PCOMA

    OP_AS  shift, and go to state 90
    PCOMA  shift, and go to state 91


state 85

   29 comparacion: BETWEEN PARA ID COMA . CORA expresion PCOMA expresion CORC PARC

    CORA  shift, and go to state 92


state 86

   53 factor: AVG CORA lista CORC .

    $default  reduce using rule 53 (factor)


state 87

   55 lista: lista COMA . expresion

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    expresion  go to state 93
    termino    go to state 23
    factor     go to state 24


state 88

   23 seleccion: IF condicion THEN asignacion ELSE . asignacion

    ID  shift, and go to state 1

    asignacion  go to state 94


state 89

   25 iteracion: WHILE condicion LLAVA programa LLAVC .

    $default  reduce using rule 25 (iteracion)


state 90

   12 declaracion: listavar DPUNTO tdato OP_AS . expresion PCOMA

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    expresion  go to state 95
    termino    go to state 23
    factor     go to state 24


state 91

   11 declaracion: listavar DPUNTO tdato PCOMA .

    $default  reduce using rule 11 (declaracion)


state 92

   29 comparacion: BETWEEN PARA ID COMA CORA . expresion PCOMA expresion CORC PARC

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    expresion  go to state 96
    termino    go to state 23
    factor     go to state 24


state 93

   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino
   55 lista: lista COMA expresion .

    OP_SUM  shift, and go to state 44
    OP_RES  shift, and go to state 45

    $default  reduce using rule 55 (lista)


state 94

   23 seleccion: IF condicion THEN asignacion ELSE asignacion .

    $default  reduce using rule 23 (seleccion)


state 95

   12 declaracion: listavar DPUNTO tdato OP_AS expresion . PCOMA
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 44
    OP_RES  shift, and go to state 45
    PCOMA   shift, and go to state 97


state 96

   29 comparacion: BETWEEN PARA ID COMA CORA expresion . PCOMA expresion CORC PARC
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 44
    OP_RES  shift, and go to state 45
    PCOMA   shift, and go to state 98


state 97

   12 declaracion: listavar DPUNTO tdato OP_AS expresion PCOMA .

    $default  reduce using rule 12 (declaracion)


state 98

   29 comparacion: BETWEEN PARA ID COMA CORA expresion PCOMA . expresion CORC PARC

    ID        shift, and go to state 14
    CTE_INT   shift, and go to state 15
    CTE_REAL  shift, and go to state 16
    AVG       shift, and go to state 18
    PARA      shift, and go to state 19

    expresion  go to state 99
    termino    go to state 23
    factor     go to state 24


state 99

   29 comparacion: BETWEEN PARA ID COMA CORA expresion PCOMA expresion . CORC PARC
   43 expresion: expresion . OP_SUM termino
   44          | expresion . OP_RES termino

    CORC    shift, and go to state 100
    OP_SUM  shift, and go to state 44
    OP_RES  shift, and go to state 45


state 100

   29 comparacion: BETWEEN PARA ID COMA CORA expresion PCOMA expresion CORC . PARC

    PARC  shift, and go to state 101


state 101

   29 comparacion: BETWEEN PARA ID COMA CORA expresion PCOMA expresion CORC PARC .

    $default  reduce using rule 29 (comparacion)
